--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,7 @@
 
 body,
 html {
-  background-color: #000;
+  background: linear-gradient(360deg, #102347 0%, #181818 100%);
   color: #fff;
 }
 
@@ -26,11 +26,11 @@ a:visited {
 
 header {
   background: linear-gradient(180deg, #102347 0%, #181818 100%);
-  height: 60px;
+  height: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 60px;
+  padding-top: 15px;
 }
 
 .logo-container {
@@ -41,8 +41,7 @@ header {
 
 .logo-container img {
   width: 100px;
-  height: 80;
-  /* padding-top: 30px; */
+  height: 100px;
 }
 
 .logo-container h1 {
@@ -56,10 +55,11 @@ header {
 }
 
 .card {
-  background-color: #283142;
+  background-color: #ffb703;
   border-radius: 10px;
   padding: 30px 10px;
-  margin-top: -22px;
+  margin-top: 20px;
+  min-height: 360px;
 }
 
 .container {
@@ -68,19 +68,65 @@ header {
   margin: 0 auto;
 }
 
+.container-layout {
+  display: grid;
+  grid-template-columns: 18% 18% 40%;
+  grid-template-rows: 30px 30px;
+  justify-content: space-between;
+
+  align-items: stretch;
+  text-align: end;
+  min-width: 150px;
+
+  color: #000;
+  font-size: 14px;
+}
+
+.container-dashboard {
+  display: grid;
+  grid-template-columns: 25% 25% 20%;
+  grid-template-rows: 20px 20px;
+  justify-content: space-between;
+
+  align-items: center;
+  text-align: end;
+  min-width: 150px;
+
+  color: #000;
+  font-size: 14px;
+
+  margin-bottom: 20px;
+}
+
+.form-control-dashboard h1 {
+  height: 42px;
+  width: 100%;
+  background-color: #1b2531;
+  border: 1px solid #384459;
+  border-radius: 5px;
+  color: #9aaabe;
+
+  text-align: left;
+  margin-top: 10px;
+}
+
 #sales {
   padding: 40px 10px;
 }
 
 .sales-title {
-  color: #676fff;
-  font-size: 24px;
-  margin-bottom: 20px;
+  display: flex;
+  color: rgb(38, 10, 114);
+  font-size: 32px;
+  justify-content: center;
+  padding-bottom: 20px;
+  /* margin-bottom: 10px; */
 }
 
 .form-control-container {
-  margin-bottom: 16px;
-  max-width: 244px;
+  /* margin-bottom: 10px; */
+  width: 100%;
+  min-width: 120px;
 }
 
 .form-control {
@@ -91,8 +137,21 @@ header {
   border-radius: 5px;
   color: #9aaabe;
   padding: 0 20px;
-  font-size: 18px;
+  font-size: 14px;
   text-align: center;
+}
+
+.form-control-container h1 {
+  height: 42px;
+  width: 83%;
+
+  background-color: #1b2531;
+  border: 1px solid #384459;
+  border-radius: 5px;
+  color: #9aaabe;
+  padding: 0 20px;
+  text-align: center;
+  padding-top: 5px;
 }
 
 .sales-table {
@@ -102,9 +161,9 @@ header {
 }
 
 .sales-table thead {
-  height: 55px;
+  height: 45px;
   font-size: 16px;
-  color: #e9e9e9;
+  color: #160101;
   font-weight: 700;
 }
 
@@ -116,12 +175,13 @@ header {
 }
 
 .sales-table tbody tr {
-  height: 74px;
-  border-top: 1px solid #5f6e82;
+  height: 70px;
+  border-top: 1px solid #000;
+  background-color: #2f4858;
 }
 
 .sales-table tbody tr:hover > td {
-  background-color: #384459;
+  background-color: #7292a4;
 }
 
 .sales-table tbody tr:nth-child(odd) {
@@ -134,8 +194,8 @@ header {
 }
 
 .red-btn {
-  height: 45px;
-  width: 45px;
+  height: 36px;
+  width: 36px;
   background: rgba(255, 107, 114, 0.1);
   border: 1px solid #ff6b72;
   border-radius: 10px;
@@ -157,6 +217,32 @@ header {
   display: none;
 }
 
+@media (min-width: 320px) {
+  .show992 {
+    display: table-cell;
+  }
+  .card,
+  .form-control-container h1 {
+    font-size: 12px;
+  }
+
+  .card,
+  .container-dashboard h1 {
+    font-size: 10px;
+  }
+
+  .container-dashboard,
+  .form-control-dashboard {
+    align-items: stretch;
+    text-align: end;
+    min-width: 120px;
+    font-size: 10px;
+    margin-right: 42px;
+
+    justify-content: space-between;
+  }
+}
+
 @media (min-width: 576px) {
   .show576 {
     display: table-cell;
@@ -165,18 +251,27 @@ header {
   .card {
     padding: 35px;
   }
+  .card,
+  .form-control-container h1,
+  .container-dashboard h1 {
+    font-size: 16px;
+  }
 
   .sales-table tbody tr {
-    height: 55px;
+    height: 45px;
   }
 
   .sales-table tbody {
-    font-size: 18px;
+    font-size: 14px;
   }
 }
 
 @media (min-width: 992px) {
   .show992 {
     display: table-cell;
+  }
+  .card,
+  .form-control-container h1 {
+    font-size: 24px;
   }
 }
